--- a/styles.css
+++ b/styles.css
@@ -1,235 +1,210 @@
 :root {
-    --bg-color: hsl(49, 37%, 94%);
-    --typewriterSpeed: 3s;
-    --typewriterCharacters: 24;
+
 }
 
 body {
+    font-family: Sora;
     margin: 0;
-    font-family: "Source Sans Pro", sans-serif;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    text-align: center;
-    background: var(--bg-color);
-    font-weight: 400;
+    padding: 0;
+    place-items: center;
+    background: beige;
 }
 
-.container {
-    width: 100%;
-    margin: 0 auto;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
-    opacity: 0;
+.nav-container {
+
 }
 
-/* NavBar Content */
-
-header::after {
-    content: '';
-    display: table;
-    clear: both;
-}
-
-.navbar__title {
-    position: absolute;
-    left: 5%;
-    font-size: 30px;
-    color: #fff;
-}
-
-.navbar__title a {
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-}
-
-.nav_container {
-    top: 0;
-    width: 100%;
-}
-
-nav {
+.navbar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
-    padding: 10px 100px;
+    height: 60px;
     box-sizing: border-box;
-    transition: 0.3s;
-}
-
-nav.black {
-    background: rgba(0, 0, 0, 0.8);
-    height: 100px;
-}
-
-nav ul {
-    margin:0;
-    padding: 0;
-    list-style: none;
-    float: right;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(0, 0, 0, 1);
+    z-index: 1;
 }
 
-nav ul li {
-    display: inline-block;
-    margin: 35px;
-    paddiing-top: 25px;
-
-    position: relative;
+.logo {
+    float: left;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    height: 30px;
+    padding: 1.375em 1.25em;
+    color: white;
 }
 
-nav ul li a {
-    color: #fff;
+.nav-items {
+    float: right;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding-right: 2em;
+}
+
+.nav-item {
+    list-style: none;
+    margin-left: 1rem;
+    padding-left: 4rem;
+}
+
+.nav-link {
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 1rem;
     transition: 0.3s;
+    color: white;
 }
 
-nav.black ul li a {
-    color: #fff;
+.nav-link:focus {
+    outline: none;
 }
 
-nav a:hover {
-    color: #bdbdbd;
+.nav-link:hover {
+    color: #AAAAAA;
+    transition: 0.3s ease;
 }
 
-nav a::before {
-    content: '';
+.hamburger {
+    display: none;
+}
+
+.line {
     display: block;
-    height: 2px;
-    background-color: #bdbdbd;
-    opacity: 40%;
-
-    position: absolute;
-    top: 100%;
-    width: 0%;
-
-    transition: all ease-in-out 250ms;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #fff;
 }
 
-nav a:hover::before {
-    width:100%;
-}
+/*NavBar Mobile Responsive*/
+@media screen and (max-width: 1000px) {
+    .nav-items {
+        position: fixed;
+        left: -150%;
+        top: 3.75rem;
+        flex-direction: column;
+        background-color: rgba(0, 0, 0, 1);
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
 
-nav .logo {
-    padding: 22px 20px;
-    height: 80px;
-    float: left;
-    font-size: 24px;
-    transition: .3s;
-}
+    .nav-items.active {
+        left:0;
+    }
 
-nav.black .logo{
-    color: #fff;
-}
+    nav-item {
+        margin: 0.2rem 0;
+    }
 
-.logo a:hover {
-    color: #bdbdbd;
-}
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
 
-/* TypeWriter Animation */
-.typewriter__container {
-    text-align: center;
-}
+    /* Hamburger click animation */
+    .hamburger.active .line:nth-child(2) {
+        opacity: 0;
+    }
 
-.typewriter__content {
-    display: inline-block;
-    text-align: center;
-}
+    .hamburger.active .line:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
 
-h1 {
-    font-size: clamp(1rem, 3vw + 1rem, 4rem);
-    position: relative;
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    text-align: center;
-    width: max-content;
-    color: #fff;
-}
-
-h1::before,
-h1::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
-h1::before {
-    background: var(--bg-color);
-    animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
-}
-
-h1::after {
-    width: .125em;
-    background: black;
-    animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards, blink 750ms steps(var(--typewriterCharacters)) infinite, glow ease-in;
-}
-
-.subtitle {
-    color: hsl(0, 0%, 0%);
-    font-size: 2rem;
-    font-weight: 400;
-    opacity: 0;
-    transform: translateY(3rem);
-    animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards, glow 4s ease-in;
-    color: #fff;
-}
-
-@keyframes typewriter {
-    to {
-        left: 100%;
+    .hamburger.active .line:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
     }
 }
 
-@keyframes blink {
-    to {
-        background: transparent;
-    }
-}
-
-@keyframes fadeInUp {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes glow {
-    to {
-        text-shadow:
-        0 0 7px #fff,
-        0 0 10px #fff,
-        0 0 21px #fff
-    }
-
-}
-
-/* About Content */
-section.sec1 {
+/*Home Content*/
+.home-color {
+    background: linear-gradient(180deg, #00A3FF 0%, #0B73AD 100%);
+    height: 1000px;
     width: 100%;
-    height: 100vh;
-    background: url("BG.jpg");
-    background-size: cover;
-    background-position: center;
 }
 
-.content {
-    margin-top: 80px;
+.home-container {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.content p {
-    width: 900px;
-    margin: 30px auto;
-    text-align: justify;
-    font-size: 20px;
-    line-height: 30px;
+.home-content {
+    position: relative;
+    right: 25%;
+    top: 30%;
+    padding: 0;
+    margin: 0;
+}
+
+.home-title {
+    font-size: 3rem;
+    font-weight: normal;
+    color: white;
+}
+
+.home-title span {
+    font-size: 4rem;
+    color: #EEDB4E;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.home-subtitle {
+    font-size: 2.5rem;
+    color: #EEDB4E;
+}
+
+.button {
+    background: #00B2FF;
+    margin: 0;
+    padding: .75em 2em;
+    text-decoration: none;
+    transition: transform;
+    transition: 300ms ease-in-out;
+    border-radius: 5px;
+    font-family: Sora;
+    color: white;
+    font-size: 1.5rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button:hover {
+    background: #008cff;
+}
+
+.img-shadow {
+    position: absolute;
+    width: 350px;
+    height: 466.67px;
+    background: #00B2FF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    transform: rotate(5.87deg);
+    left: 65%;
+}
+
+.home-portrait img {
+    position: absolute;
+    width: 350px;
+    height: 466.67px;
+    background: url(self-portrait.jpg);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 5px;
+    left: 65%;
+}
+
+/*About Section*/
+.about-container {
+    width: 100%;
+    height: 500px;
 }
